k8s/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-crud-app-lb
  labels:
    app: go-crud-app-lb
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: go-crud-app
  type: LoadBalancer
