k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-crud-app-service
spec:
  selector:
    app: go-crud-app
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
