k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-crud-app-svc
  labels:
    app: go-crud-app-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: go-crud-app-svc
  type: ClusterIP
